2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/watchdogadjusttochain.c: Rework to ease code coverage
	analysis.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/semcreate.c: Clean up rework to eliminate the goto and fix
	a bug introduced by rework.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/heap.c: Remove unneeded include.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/semcreate.c: Restructure to simplify and improve ability to
	anlize this routine for coverage.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectgetinfo.c: Clean up and eliminate unreachable code.

2009-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/rtemsobjectapimaximumclass.c,
	score/include/rtems/score/object.h,
	score/src/objectapimaximumclass.c, score/src/objectgetinfo.c: Change
	return type of API maximum class methods to unsigned.

2009-07-07	Chris Johns <chrisj@rtems.org>

	* score/src/objectshrinkinformation.c: Rework loop to simplify and
	remove dead code.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog, posix/src/mutexsetprioceiling.c: Remove warning.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexsetprioceiling.c: Remove warning.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexsetprioceiling.c: Restructure to eliminate code
	paths which are unreachable. Also add more comments.
	* score/src/coremutexsurrender.c: Mark some code as RTEMS_DEBUG only
	since it cannot be hit unless coremutexseize.c is broken.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexget.c: Restructure to improve ability to do coverage
	analysis.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/psxtransschedparam.c: Restructure to avoid untestable code
	being generated by switch.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>
