@@ -1,3 +1,10 @@
+2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* configure.ac, score/src/threadqenqueuepriority.c: Add
+	RTEMS_DO_NOT_UNROLL_THREADQ_ENQUEUE_PRIORITY to give user ability to
+	disable the loop in _Thread_queue_Enqueue_priority from being
+	unrolled. This reduces code size and makes coverage analysis easier.
+
 2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* score/src/watchdogadjusttochain.c: Rework to ease code coverage
